<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_view_list_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/loudspeaker"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_advertentie_oppas"
            android:icon="@drawable/loudspeaker"
            android:title="@string/advertentie_oppas" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="@string/inbox" />
    </group>
</menu>
