<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.controller.advertentie.AdvertentieRecyclerFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_advert_recycler" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.controller.create_advert.AdvertEigenaarFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/advert_eigenaar_main" />
    <fragment
        android:id="@+id/nav_advertentie_oppas"
        android:name="com.example.myapplication.controller.create_advert.AdvertOppasFragment"
        android:label="@string/advertentie_oppas"
        tools:layout="@layout/advert_create_oppas_main" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.controller.afspraken.AfspraakRecyclerFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_inbox"
        android:name="com.example.myapplication.controller.messaging.InboxRecyclerFragment"
        android:label="@string/inbox"
        tools:layout="@layout/fragmet_inbox" />
</navigation>
